force-app/src/objects/TR1__Closing_Report_Schedule__c.object
<CustomObject>
    <description>A schedule record is created for each day a Candidate is assigned to the Vacancy</description>
    <fields>
        <fullName>TR1__Booking_Type__c</fullName>
        <formula>TEXT(TR1__Closing_Report__r.TR1__Booking_Type__c )</formula>
        <label>Booking Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CSD_End_Time__c</fullName>
        <formula>TR1__Candidate_Availability__r.TR1__End_Date_Time__c</formula>
        <label>CSD End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__CSD_Start_Time__c</fullName>
        <formula>TR1__Candidate_Availability__r.TR1__Start_Date_Time__c</formula>
        <label>CSD Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Availability</label>
        <referenceTo>TR1__Candidate_Availability__c</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>ClosingReportSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>ClosingReportSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__End_DateTime_d2d__c</fullName>
        <formula>TR1__Vacancy_Schedule__r.TR1__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Forecasted_Shift_Pay__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Shift_Multiple__c *  TR1__Closing_Report__r.TR1__Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__JSD_End_Time__c</fullName>
        <formula>TR1__Vacancy_Schedule__r.TR1__End_Date_Time__c</formula>
        <label>JSD End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__JSD_Start_Time__c</fullName>
        <formula>TR1__Vacancy_Schedule__r.TR1__Start_Date_Time__c</formula>
        <label>JSD Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job__r.Name</formula>
        <label>Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_s_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job&apos;s account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Closing Report Schedules (Job&apos;s account)</relationshipLabel>
        <relationshipName>Closing_Report_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Leader_Principal_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Other_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Leader_Principal_Percentage__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Other_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Mgr_Head_of_Branch_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Marketing_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Marketing_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Mgr_Head_of_Branch_Percentage__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Marketing_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Owner_Name__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job__r.Owner:User.FirstName +&apos; &apos;+ TR1__Closing_Report__r.TR1__Job__r.Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Pay_Type__c</fullName>
        <formula>TEXT(TR1__Closing_Report__r.TR1__Pay_Type__c)</formula>
        <label>Pay Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed_Id__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Person_Placed__c</formula>
        <label>Person Placed Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Person_Placed__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Person_Placed__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Placed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Sales_Consultant_Credit__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Credit__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Job_Credit__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Sales_Consultant_Percentage__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Job_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy Credit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Schedule_Past_Contract_End_Date__c</fullName>
        <description>If the schedule date is greater than closing report contract end date , it evaluates to true</description>
        <formula>IF(TR1__Schedule_Date__c &gt; TR1__Closing_Report__r.TR1__Contract_End_Date__c  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Past Contract End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Schedule_date_greater_CED__c</fullName>
        <formula>TR1__Schedule_Date__c  &gt;  TR1__Closing_Report__r.TR1__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule date greater CED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Schedules_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedules Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Start_DateTime_d2d__c</fullName>
        <formula>TR1__Vacancy_Schedule__r.TR1__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Stay_On_September_2014__c</fullName>
        <formula>TEXT ( TR1__Closing_Report__r.TR1__Person_Placed__r.TR1__Stay_On_September_2014__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stay On September 2014?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Sub_Status__c</fullName>
        <description>It specifies whether Booking is confirmed or tentatively accepted</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                    <default>true</default>
                    <label>Tentative</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Approver__c</fullName>
        <formula>IF(NOT(ISBLANK(TR1__Closing_Report__r.TR1__Timesheet_Approver__r.LastName)), TR1__Closing_Report__r.TR1__Timesheet_Approver__r.FirstName +&apos; &apos;+ TR1__Closing_Report__r.TR1__Timesheet_Approver__r.LastName, &apos;&apos;)</formula>
        <label>Timesheet Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Trial_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy Schedule</label>
        <referenceTo>TR1__Vacancy_D2D__c</referenceTo>
        <relationshipLabel>Closing Report Schedules</relationshipLabel>
        <relationshipName>ClosingReportSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Shift_Type__c</fullName>
        <formula>Text( TR1__Vacancy_Schedule__r.TR1__Shift__c )</formula>
        <label>Vacancy Shift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__WeekEndDate__c</fullName>
        <formula>TR1__Schedule_Date__c - (CASE(MOD( TR1__Schedule_Date__c - DATE(1900, 1, 6), 7), 0,
5, 1,
6, 2,
0, 3,
1, 4,
2, 5,
3, 6,
4,7)) + 6</formula>
        <label>WeekEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Work_Shift_Location_lkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Shift Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.TR1__Job_s_account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Closing Report Schedules (Work Shift Location)</relationshipLabel>
        <relationshipName>Closing_Report_Schedules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Work_Shit_Location__c</fullName>
        <formula>TEXT(TR1__Vacancy_Schedule__r.TR1__Work_Shift_Location__c)</formula>
        <label>Work Shit Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__isChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChecked</label>
        <type>Checkbox</type>
    </fields>
    <label>Closing Report Schedule</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRS-{0000000}</displayFormat>
        <label>CRS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closing Report Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TR1__Start_Date_Time_Should_Not_Be_Past_Value</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR( ISNEW() ,ISCHANGED(TR1__Start_DateTime_d2d__c) ), DATEVALUE( TR1__Start_DateTime_d2d__c) &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>TR1__Candidate_Availability__c</errorDisplayField>
        <errorMessage>Start date time should not be past value</errorMessage>
    </validationRules>
</CustomObject>